# Replit.sh

./: .gitignore  codeFormat.py  core  ids.json  in.json  index.md  main.py  middleware.py  official_links.txt  out.json  pyproject.toml  readme.md  sample.env  versions.md
static/: humans.txt  robots.txt  sitemap.xml
templates/: custom.html  dashboard.html  delete.html  done.html  edit.html  error.html  getid.html  index.html  social.html  socialpost.html  submit.html
