[tool.poetry]
name = "Replit.sh"
version = "2.5.2"
description = ""
authors = ["Piero Maddaleni <piero@repl.it>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
replit = "^2.0.0"
validators = "^0.18.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
